chore: changing container name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.7'
 services:
     api:
-        build: ./rails-api
-        container_name: api
+        build: ./api
+        container_name: rails
         command: sh -c "rm -f tmp/pids/server.pid && bundle && bundle exec rails s -p 3000 -b '0.0.0.0'"
         stdin_open: true
         tty: true
         volumes:
-            - ./rails-api:/app
+            - ./api:/app
         ports:
             - "3000:3000"
         depends_on:
@@ -15,19 +15,19 @@ services:
             - sidekiq
             - cable
     sidekiq:
-        build: ./rails-api
+        build: ./api
         container_name: sidekiq
         command: sh -c "bundle && bundle exec sidekiq"
         volumes:
-            - ./rails-api:/app
+            - ./api:/app
         depends_on:
             - redis
     cable:
-        build: ./rails-api
+        build: ./api
         container_name: cable
         command: puma -p 28080 cable/config.ru
         volumes:
-            - ./rails-api:/app
+            - ./api:/app
         ports:
             - '28080:28080'
         depends_on:
