chore: new gems

--- a/api/Gemfile
+++ b/api/Gemfile
@@ -27,6 +27,13 @@ gem 'figaro'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 gem 'redis'
+
+gem 'hiredis'
+
+gem 'meilisearch-rails'
+
+gem 'kaminari'
+
 # Use Active Model has_secure_password
 gem 'bcrypt', '~> 3.1.7'
 
