fix: meilisearch srvc as a dependence from api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
             - redis
             - sidekiq
             - cable
+            - meilisearch
     meilisearch:
         image: getmeili/meilisearch:v0.28
         container_name: meilisearch
