--- a/api/config/application.yml
+++ b/api/config/application.yml
@@ -10,14 +10,26 @@
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 
-default: &default
+republic: &republic
+  REPUBLIC_DOOR_HEIGHT: '1.9'
+  REPUBLIC_DOOR_WIDTH: '0.8'
+  REPUBLIC_WINDOW_HEIGHT: '1.2'
+  REPUBLIC_WINDOW_WIDTH: '2'
+  REPUBLIC_WINDOWS_DOORS_WALL_AREA_RATIO_LIMIT: '0.5'
+
+latech: &latech
+  LATECH_CEPLA_URI:  'http://cep.la'
+
+moat: &moat
   MOAT_URI:  'https://www.moat.ai/api/task'
-  CEPLA_URI:  'http://cep.la'
+
+default: &default
+  <<: [*moat, *latech, *republic]
+  REDIS_URL: 'redis://redis:6379'
+  MEILISEARCH_URL: 'http://meilisearch:7700/'
 
 development: &development
   <<: *default
-  REDIS_URL: 'redis://redis:6379'
-  MEILISEARCH_URL: 'http://meilisearch:7700/'
 
 staging:
   <<: *default
