--- a/api/Gemfile
+++ b/api/Gemfile
@@ -3,13 +3,15 @@
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby '2.7.6'
+ruby '2.7.7'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails', branch: 'main'
-gem 'rails', '~> 6.0.5'
+gem 'rails', '~> 6.1.1'
 
 # Use Puma as the app server
 gem 'puma', '~> 4.1'
+
+gem 'pg'
 
 gem 'devise'
 
@@ -48,17 +50,13 @@ gem 'bootsnap', '>= 1.4.2', require: false
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 gem 'rack-cors'
 
-group :staging, :production do
-  gem 'pg'
-end
-
 group :development, :test do
   # Use sqlite3 as the database for Active Record
   gem 'sqlite3', '~> 1.4'
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem 'factory_bot_rails'
-  gem 'faker', git: 'https://github.com/faker-ruby/faker.git', branch: 'master'
+  gem 'faker', github: 'faker-ruby/faker'
   gem 'pry-byebug'
   gem 'rspec-rails'
   gem 'shoulda-matchers'
