--- a/api/config/database.yml
+++ b/api/config/database.yml
@@ -4,32 +4,38 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-default: &default
+
+sqlite: &sqlite
   adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
 
-development:
-  <<: *default
-  database: db/development.sqlite3
-
-staging:
-  adapter: postgis
+postgresql: &postgresql
+  adapter: postgresql
   pool: 30
   encoding: unicode
-  database: <%= Rails.application.credentials.dig(:heroku, :postgresql, :database) %>
-  host: <%= Rails.application.credentials.dig(:heroku, :postgresql, :host) %>
-  username: <%= Rails.application.credentials.dig(:heroku, :postgresql, :user) %>
-  password: <%= Rails.application.credentials.dig(:heroku, :postgresql, :password) %>
-  
+
+development:
+  primary:
+    <<: *postgresql
+    database: api_development
+    host: db
+    username: root
+    password: root
+  primary_replica:
+    <<: *postgresql
+    database: api_development
+    host: replica
+    username: readonly
+    password: reader
+    replica: true
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  <<: *sqlite
   database: db/test.sqlite3
 
 production:
-  <<: *default
+  <<: *sqlite
   database: db/production.sqlite3
