chore: api depends on replica

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
         ports:
             - "3000:3000"
         depends_on:
+            - replica
             - redis
             - sidekiq
             - cable
