--- a/api/Gemfile
+++ b/api/Gemfile
@@ -21,14 +21,15 @@ gem 'cancancan'
 
 gem 'httparty'
 
+gem 'net-http'
+
 gem 'active_model_serializers'
 
 gem 'figaro'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.7'
 # Use Redis adapter to run Action Cable in production
-# gem 'redis', '~> 4.0'
-gem 'redis'
+gem 'redis', '~> 4.0'
 
 gem 'hiredis'
 
