--- a/api/config/database.yml
+++ b/api/config/database.yml
@@ -33,8 +33,13 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *sqlite
-  database: db/test.sqlite3
+  primary:
+    <<: *sqlite
+    database: db/test.sqlite3
+  primary_replica:
+    <<: *sqlite
+    database: db/test.sqlite3
+    replica: true
 
 production:
   <<: *sqlite
