--- a/api/.rubocop.yml
+++ b/api/.rubocop.yml
@@ -51,7 +51,8 @@ Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: space
 
 Layout/LineLength:
-  Enabled: false
+  Enabled: true
+  Max: 80
 
 Lint/BooleanSymbol:
   Enabled: true
@@ -162,6 +163,10 @@ Style/OptionalBooleanParameter:
 
 Style/MethodCallWithArgsParentheses:
   Enabled: true
+  IgnoredMethods:
+    - 'raise'
+    - 'render'
+    - 'use'
   AllowedMethods:
     - 'raise'
     - 'render'
