--- a/api/.rubocop.yml
+++ b/api/.rubocop.yml
@@ -205,6 +205,7 @@ Style/MethodCallWithArgsParentheses:
     - 'raise'
     - 'render'
     - 'use'
+    - yield
   Exclude:
     - 'spec/**/*'
     - db/schema.rb
